# nomad-api-plaground

./: .gitignore  main.py  pyproject.toml
actions/: auth.py  file_operations.py  uploads.py
config/: settings.py
utils/: __init__.py  api_client.py  auth.py  logger.py  multi_delete_utils.py  zip_utils.py
