[project]
name = "playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "loguru>=0.7.3",
    "mypy>=1.18.2",
    "pip>=25.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.4",
    "rich>=14.1.0",
    "ruff>=0.13.3",
    "tqdm>=4.67.1",
    "types-requests>=2.32.4.20250913",
]
